--- a/css/styles.css
+++ b/css/styles.css
@@ -57,7 +57,7 @@ h1 {
 
 .header-inner {
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex-start; 
     align-items: center;
 }
 
