--- a/css/style.css
+++ b/css/style.css
@@ -470,19 +470,13 @@ main {
 
 /* Actions container in toolbar */
 .actions-container {
-    margin-left: auto;
+    margin-left: auto; 
     display: flex;
     align-items: center;
     gap: 0.5rem; 
 }
 
-/* Save status in toolbar */
-.save-status-container {
-    margin-left: auto; 
-    display: flex;
-    align-items: center;
-}
-
+/* Save status */
 .save-status {
     font-size: 0.9rem;
     opacity: 0.7;
