--- a/css/style.css
+++ b/css/style.css
@@ -658,7 +658,7 @@ main {
     }
     
     .create-post-container {
-        padding: 20px 30px;
+        padding: 20px;
         margin: auto;
         border-radius: 8px;
     }
