--- a/css/style.css
+++ b/css/style.css
@@ -573,10 +573,11 @@ main {
 
 /* Word count */
 
-.word-count {
+.editor-stats {
     margin-left: 16px;
     font-size: 13px;
     color: var(--secondary-color);
+    white-space: nowrap;
 }
 
 /* Save status */
